--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/node": "^24.0.3",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
