--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^24.0.3",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@vercel/node": "^5.2.2",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
